Prevent margin collapse on menu ul

--- a/src/components/site-menu/site-menu.scss
+++ b/src/components/site-menu/site-menu.scss
@@ -12,6 +12,7 @@ site-menu {
 site-menu ul {
   list-style: none;
   margin: 0;
+  overflow: auto;
   padding: 0;
 }
 
